# PTFA

./: PPLS.py  PPLS_Stacked_Test.py  README.md  Simulation.ipynb  example.ipynb  pyproject.toml
Simulation/: PPLS.py  PPLS_Stacked_Test.py  Simulation.ipynb
python_package/: pyproject.toml
python_package/src/ppls/: example.ipynb  ppls.py  ppls_sv.py
python_package/src/ppls.egg-info/: PKG-INFO  SOURCES.txt
src/ppls/: Temp file example.ipynb
src/ppls.egg-info/: PKG-INFO  top_level.txt
src/ptfa/: __init__.py  example.ipynb  generation.py  ptfa.py  ptfa_testing.py
src/ptfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ptfm/: example.ipynb  ptfm.py
